# ddm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  REUSE.toml  flake.nix
.github/: copilot-instructions.md
.github/workflows/: ddm-archlinux-build.yml  ddm-deepin-build.yml
.reuse/: dep5
data/: CMakeLists.txt  DDMConfig.cmake.in  org.deepin.DisplayManager.conf
data/interfaces/: org.deepin.DisplayManager.xml
data/man/: CMakeLists.txt  ddm-state.conf.rst.in  ddm.conf.rst.in  ddm.rst.in
data/scripts/: Xsession  Xsetup  wayland-session
data/systemd/: CMakeLists.txt  override.conf
data/themes/elarun/: README  metadata.desktop
data/themes/maya/: LICENSE  Main.qml  README
data/translations/: ka.ts
debian/: changelog  control  copyright  ddm.config  ddm.install  ddm.postinst  ddm.postrm  ddm.prerm  ddm.templates  libddm-dev.install  libddm.install  rules
nix/: default.nix
services/: CMakeLists.txt  ddm-sysuser.conf.in  ddm.pam  ddm.service.in  debian.ddm-sysuser.conf.in  debian.ddm.pam  seatd-dde.service.in  treeland-dde-seatd.conf.in
src/: CMakeLists.txt
src/auth/: Auth.cpp  Auth.h  CMakeLists.txt
src/common/: CMakeLists.txt  Config.h  ConfigReader.cpp  Configuration.h  Constants.h.in  MessageHandler.h  Messages.h  Session.cpp  SignalHandler.cpp  SignalHandler.h  VirtualTerminal.cpp  VirtualTerminal.h  XAuth.cpp
src/daemon/: Auth.cpp  Auth.h  CMakeLists.txt  DaemonApp.cpp  DaemonApp.h  DdeSeatdControl.cpp  DdeSeatdControl.h  Display.cpp  Display.h  DisplayManager.cpp  DisplayManager.h  Greeter.cpp  Greeter.h  Pam.cpp  Pam.h  PowerManager.cpp  PowerManager.h  Seat.cpp  Seat.h  SeatManager.cpp  SeatManager.h  SingleWaylandDisplayServer.cpp  SingleWaylandDisplayServer.h  SocketServer.cpp  SocketServer.h  TreelandConnector.cpp  TreelandConnector.h  TreelandDisplayServer.cpp  TreelandDisplayServer.h  TtyUtils.h  UserSession.cpp  UserSession.h  VirtualTerminal.cpp  VirtualTerminal.h  XorgDisplayServer.cpp  XorgDisplayServer.h  ddmremote.rep  treelandremote.rep
src/helper/: Backend.h  CMakeLists.txt  HelperApp.cpp  HelperApp.h  HelperStartSingleMode.cpp  Pam.cpp  UserSession.cpp  singlewaylandhelper.cpp  singlewaylandhelper.h
src/helper/backend/: PamBackend.cpp
